--- a/Contenu/i18n/en.json
+++ b/Contenu/i18n/en.json
@@ -7,7 +7,10 @@
   "titreAjoutCours": "Adding a course : ",
   "soustitreAjoutCours": "Add a course",
   "langagesVus": "Programming languages seen in",
-  "duree": "Duration : ",
-  "difficulte": "Difficulty : ",
+  "nom": "Name",
+  "duree": "Duration",
+  "difficulte": "Difficulty",
+  "description": "Description",
+  "prive": "Private",
   "ajoutLangage": "Add a programming language"
 }
